data/derived/comb/progs/unify/prog0337.ml.out
Characters 39-68:
  let rec mulByDigit i l = if i > 0 then bigAdd l (mulByDigit (i-1) l);;
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type unit
